add basemap gallery, add layer list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
     <div id="viewDiv"></div>
-
+<div id="toolbar">
+    <button class="esri-icon-basemap" id="basemap-btn" type="button" title="Basemap"></button>
+    <button class="esri-icon-layer-list" id="layerList-btn" type="button" title="Layer list"></button>
+</div>
 </body>
 
 </html>
